[package]
name = "rumpus_driver"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.43", features = ["derive"] }
image = "0.25.6"
sguaba = "0.9.4"
rumpus = { git="https://github.com/benjaminpotter/rumpus.git", tag="0.3.0-rc.1" }
uom = { version = "0.37.0", features = ["serde"] }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
csv = "1.3.1"
